testdata/baselines/reference/submodule/conformance/privateNamesInGenericClasses.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'CallableFunction'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'NewableFunction'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
privateNamesInGenericClasses.ts(22,3): error TS18013: Property '#foo' is not accessible outside class 'C' because it has a private identifier.
privateNamesInGenericClasses.ts(23,3): error TS18013: Property '#method' is not accessible outside class 'C' because it has a private identifier.
privateNamesInGenericClasses.ts(24,3): error TS18013: Property '#prop' is not accessible outside class 'C' because it has a private identifier.
privateNamesInGenericClasses.ts(25,1): error TS2322: Type 'C<string>' is not assignable to type 'C<number>'.
  Type 'string' is not assignable to type 'number'.
privateNamesInGenericClasses.ts(26,1): error TS2322: Type 'C<number>' is not assignable to type 'C<string>'.
  Type 'number' is not assignable to type 'string'.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'CallableFunction'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'NewableFunction'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== privateNamesInGenericClasses.ts (5 errors) ====
    class C<T> {
        #foo: T;
        #method(): T { return this.#foo; }
        get #prop(): T { return this.#foo; }
        set #prop(value : T) { this.#foo = value; }
        
        bar(x: C<T>) { return x.#foo; }          // OK
        bar2(x: C<T>) { return x.#method(); }    // OK
        bar3(x: C<T>) { return x.#prop; }        // OK
    
        baz(x: C<number>) { return x.#foo; }     // OK
        baz2(x: C<number>) { return x.#method; } // OK
        baz3(x: C<number>) { return x.#prop; }   // OK
    
        quux(x: C<string>) { return x.#foo; }    // OK
        quux2(x: C<string>) { return x.#method; }// OK
        quux3(x: C<string>) { return x.#prop; }  // OK
    }
    
    declare let a: C<number>;
    declare let b: C<string>;
    a.#foo;                                   // Error
      ~~~~
!!! error TS18013: Property '#foo' is not accessible outside class 'C' because it has a private identifier.
    a.#method;                                // Error
      ~~~~~~~
!!! error TS18013: Property '#method' is not accessible outside class 'C' because it has a private identifier.
    a.#prop;                                  // Error
      ~~~~~
!!! error TS18013: Property '#prop' is not accessible outside class 'C' because it has a private identifier.
    a = b;                                    // Error
    ~
!!! error TS2322: Type 'C<string>' is not assignable to type 'C<number>'.
!!! error TS2322:   Type 'string' is not assignable to type 'number'.
    b = a;                                    // Error
    ~
!!! error TS2322: Type 'C<number>' is not assignable to type 'C<string>'.
!!! error TS2322:   Type 'number' is not assignable to type 'string'.
    